# upg-vpp

./: .clang-format  .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  .golangci.yml  CMakeLists.txt  CODEOWNERS  Dockerfile  Dockerfile.build  Dockerfile.devel  KNOWN_ISSUES.md  Makefile  README.md  changelog-config.json  compile_commands.json  start.sh  vpp.spec
cmake/: Packager.cmake
hack/: attach-gdb.sh  build-image-name.sh  build-internal.sh  buildenv.sh  checkstyle.sh  ci-build.sh  clangd.template  e2e.sh  ensure-build-image.sh  genbinapi.sh  generate_version_h.sh  registry-login.sh  retag-unexpire.sh  run-integration-tests-internal.sh  update-build-image-tag.sh  update-vpp.sh  version.sh  vscode-format.sh
hack/hooks/: pre-commit
upf/: CMakeLists.txt  flowtable.c  flowtable.h  flowtable_init.c  flowtable_tcp.h  flowtable_timer.c  flowtable_timer.h  llist.h  pfcp.c  pfcp.h  slo.h  unittest.c  upf.api  upf.c  upf.h  upf_adf.c  upf_api.c  upf_app_db.c  upf_app_db.h  upf_app_dpo.c  upf_app_dpo.h  upf_buffer_opaque.h  upf_classify.c  upf_cli.c  upf_flow_node.c  upf_forward.c  upf_gtpu_decap.c  upf_gtpu_encap.c  upf_gtpu_error.def  upf_input.c  upf_ipfilter.c  upf_ipfilter.h  upf_ipfix.c  upf_ipfix.h  upf_ipfix_templates.c  upf_ipfix_templates.h  upf_nat.c  upf_nat.h  upf_nat_inlines.h  upf_nat_lib.h  (+22 more)
upf-plugin/: .clang-format  CMakeLists.txt  Dockerfile  KNOWN_ISSUES.md  Makefile
upf-plugin/cmake/: FindVPP.cmake  Packager.cmake
upf-plugin/docs/: Accounting.md  Development.md
upf-plugin/hack/: build-internal.sh  e2e.sh  genbinapi.sh  install-hooks.sh  run-integration-tests-internal.sh
upf-plugin/hack/hooks/: pre-commit
upf-plugin/hack/images/: Dockerfile.rsyncd  rsyncd.sh
upf-plugin/test/e2e/: README.md  go.mod  go.sum  ipfix_e2e.go  ipfix_handler.go  upg_e2e.go  upg_test.go  vpp_e2e.go
upf-plugin/test/e2e/binapi/fib_types/: fib_types.ba.go
upf-plugin/test/e2e/binapi/ipfix_export/: ipfix_export.ba.go  ipfix_export_rpc.ba.go
upf-plugin/test/e2e/binapi/memclnt/: memclnt.ba.go
upf-plugin/test/e2e/binapi/upf/: upf.ba.go  upf_rpc.ba.go
upf-plugin/test/e2e/framework/: expect.go  framework.go  gtpu.go  log.go  sessionconfig.go  upgmode.go
upf-plugin/test/e2e/network/: capture.go  netns.go  netns_linux.go  netns_unsupported.go
upf-plugin/test/e2e/ns/: ns.go  ns_linux.go  ns_linux_test.go  ns_suite_test.go
upf-plugin/test/e2e/pfcp/: multitimer.go  pfcp.go  request_queue.go
upf-plugin/test/e2e/sgw/: config.go  session.go  uplane.go  uplane_handlers.go  uplane_shared.go  uplane_tun.go  uplane_unsupported.go
upf-plugin/test/e2e/traffic/: http.go  httputils.go  icmp.go  redirect.go  trafficrec.go  utils_unsupported.go
upf-plugin/test/e2e/util/: fit.go  fqdn.go
upf-plugin/test/e2e/vpp/: vpp.go  vppstartup.go
upf-plugin/upf/: README.md  unittest.c  upf.api  upf.c  upf.h  upf_api.c  upf_cli.c  upf_limits.h  upf_stats.c  upf_stats.h  upf_stats_periodic.c  upf_wk.h
upf-plugin/upf/adf/: adf.c  adf.h  cli.c  dpi.c  matcher.c  matcher.h
upf-plugin/upf/core/: upf_buffer_opaque.h  upf_types.c  upf_types.h
upf-plugin/upf/flow/: flowtable.c  flowtable.h  flowtable_init.c  flowtable_inlines.h  flowtable_tcp.h  upf_flow_classify_node.c  upf_flow_node.c
upf-plugin/upf/integrations/: upf_ipfix.c  upf_ipfix.h  upf_ipfix_templates.c  upf_ipfix_templates.h  upf_netcap.c  upf_netcap.h  upf_netcap_node.c  upf_ueip_export.c  upf_ueip_export.h
upf-plugin/upf/nat/: nat.c  nat.h  nat_cli.c  nat_dpo.c  nat_dpo.h  nat_dpo_node.c  nat_flow.c  nat_format.c  nat_forward_node.c  nat_icmp_flow.c  nat_node_inlines.h  nat_private.h
upf-plugin/upf/pfcp/: pfcp_proto.c  pfcp_proto.h  upf_nwi.c  upf_nwi.h  upf_pfcp_assoc.c  upf_pfcp_assoc.h  upf_pfcp_handlers.c  upf_pfcp_handlers.h  upf_pfcp_handlers_mt.c  upf_pfcp_server.c  upf_pfcp_server.h  upf_pfcp_session_server.c  upf_session.c  upf_session.h  upf_session_report.h
upf-plugin/upf/proxy/: upf_proxy.c  upf_proxy.h  upf_proxy_accept_node.c  upf_proxy_input_node.c  upf_proxy_output_node.c  upf_proxy_reset_node.c  upf_proxy_tcp_bypass_node.c
upf-plugin/upf/rules/: upf_acl.c  upf_acl.h  upf_classify.c  upf_classify.h  upf_classify_inlines.h  upf_flowless_node.c  upf_forward_node.c  upf_forwarding_policy.c  upf_forwarding_policy.h  upf_gtpu.c  upf_gtpu.h  upf_gtpu_decap_node.c  upf_gtpu_echo_req_node.c  upf_gtpu_encap_node.c  upf_gtpu_error_ind_node.c  upf_gtpu_proto.h  upf_ipfilter.c  upf_ipfilter.h  upf_rules.c  upf_rules.h  upf_session_dpo.c  upf_session_dpo.h  upf_session_dpo_node.c
upf-plugin/upf/sxu/: upf_session_update.c  upf_session_update.h  upf_sxu_1_provide_actions.c  upf_sxu_2_update_dynamic.c  upf_sxu_3_compile_rules.c  upf_sxu_45_rpc.c  upf_sxu_format.c  upf_sxu_inlines.h  upf_sxu_meta.c
upf-plugin/upf/test/: association_setup_request.txt  association_setup_response_ue_ip_address_pool_identity.txt  session_deletion_response.txt  session_modification_request.txt  session_modification_response.txt  test_upf.py
upf-plugin/upf/utils/: common.h  heap_handle.h  ip_helpers.c  ip_helpers.h  ip_mask.h  llist.h  pool_claim.h  ratelimit_atomic.h  tokenbucket.h  upf_handoff_template.c  upf_handoff_template.h  upf_localids.c  upf_localids.h  upf_mt.c  upf_mt.h  upf_timer.c  upf_timer.h  worker_pool.h
upf/test/: association_setup_request.txt  session_deletion_response.txt  session_establishment_request.txt  session_modification_request.txt  session_modification_response.txt  session_report_request.txt  test_upf.py
vpp-patches/: 0001-CI-and-build-infrastructure-adjustments.patch  0001-det44-allow-nat-for-unknown-proto.patch  0002-Only-install-hyperscan-on-amd64.patch  0003-Fix-bad-format_time_float-usage.patch  0004-Increase-reassembly-limit.patch  0004-TEMP-Increase-reassembly-limit.patch  0005-Bump-scapy-to-v2.4.4.patch  0006-Add-downstream-marker.patch  0007-Follow-symlinks-while-checking-timestamps-during-bui.patch  0007-ethernet-fix-Ethernet-DMAC-checks.patch  0008-Follow-symlinks-while-checking-timestamps-during-bui.patch  0008-vlib-decrement-counters.patch  0008-vppinfra-Refactor-sparse_vec_free.patch  (+26 more)
(+96 files in other folders)
